[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/lights/points_count_light_alpha.png" type="Texture" id=1]
[ext_resource path="res://src/ui/score_counter/score_wheel/ScoreWheel.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/score_counter/score_counter.gd" type="Script" id=3]
[ext_resource path="res://assets/particles/spark.png" type="Texture" id=4]
[ext_resource path="res://src/ui/score_counter/spark_particles.gd" type="Script" id=5]
[ext_resource path="res://assets/sprites/counter_separator.png" type="Texture" id=6]
[ext_resource path="res://assets/lights/neon.png" type="Texture" id=7]
[ext_resource path="res://assets/sounds/wheel_spin_click.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/wheel_sparkling.wav" type="AudioStream" id=9]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.417431, 0.990826 )
colors = PoolColorArray( 1, 0.941176, 0.105882, 1, 1, 0.52549, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 1.0
flag_align_y = true
flag_disable_z = true
direction = Vector3( -0.1, -1, 0 )
spread = 5.0
gravity = Vector3( 0, 980, 0 )
initial_velocity = 1000.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.3
color_ramp = SubResource( 2 )

[node name="ScoreCounter" type="Node2D"]
light_mask = 1027
script = ExtResource( 3 )

[node name="ScoreWheel" parent="." instance=ExtResource( 2 )]
position = Vector2( 272, 0 )

[node name="ScoreWheel2" parent="." instance=ExtResource( 2 )]
position = Vector2( 136, 0 )
decimal = 1

[node name="ScoreWheel3" parent="." instance=ExtResource( 2 )]
decimal = 2

[node name="ScoreWheel4" parent="." instance=ExtResource( 2 )]
position = Vector2( -136, 0 )
decimal = 3

[node name="ScoreWheel5" parent="." instance=ExtResource( 2 )]
position = Vector2( -272, 0 )
decimal = 4

[node name="NinePatchRect" type="NinePatchRect" parent="."]
self_modulate = Color( 0.384314, 0.984314, 1, 0.439216 )
light_mask = 1027
margin_left = -336.0
margin_top = -64.0
margin_right = 336.0
margin_bottom = 64.0
texture = ExtResource( 1 )
patch_margin_left = 48
patch_margin_top = 48
patch_margin_right = 48
patch_margin_bottom = 48
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SparkParticles" type="Particles2D" parent="."]
self_modulate = Color( 15, 15, 15, 1 )
light_mask = 1027
position = Vector2( 332.785, 58.0826 )
z_index = 5
emitting = false
amount = 100
explosiveness = 0.03
randomness = 1.0
process_material = SubResource( 3 )
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="SparkSound" type="AudioStreamPlayer2D" parent="SparkParticles"]
stream = ExtResource( 9 )
bus = "Reverb"

[node name="Separator" type="Node2D" parent="."]
light_mask = 1027

[node name="Sprite" type="Sprite" parent="Separator"]
self_modulate = Color( 0.305882, 0.305882, 0.305882, 1 )
light_mask = 1027
position = Vector2( -204, -1.90735e-06 )
scale = Vector2( 0.857628, 2.06452 )
texture = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="Separator"]
self_modulate = Color( 0.305882, 0.305882, 0.305882, 1 )
light_mask = 1027
position = Vector2( -67.775, -1.90735e-06 )
scale = Vector2( 0.857628, 2.06452 )
texture = ExtResource( 6 )

[node name="Sprite3" type="Sprite" parent="Separator"]
self_modulate = Color( 0.305882, 0.305882, 0.305882, 1 )
light_mask = 1027
position = Vector2( 68.0916, -1.90735e-06 )
scale = Vector2( 0.857628, 2.06452 )
texture = ExtResource( 6 )

[node name="Sprite4" type="Sprite" parent="Separator"]
self_modulate = Color( 0.305882, 0.305882, 0.305882, 1 )
light_mask = 1027
position = Vector2( 204.735, -1.90735e-06 )
scale = Vector2( 0.857628, 2.06452 )
texture = ExtResource( 6 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -335.909, 0 )
rotation = 1.5708
texture = ExtResource( 7 )
offset = Vector2( 0, -200 )
texture_scale = 0.4
energy = 0.8
range_item_cull_mask = 1024

[node name="Light2D2" type="Light2D" parent="."]
position = Vector2( 337.119, 0 )
rotation = -1.5708
texture = ExtResource( 7 )
offset = Vector2( 0, -200 )
texture_scale = 0.4
energy = 0.8
range_item_cull_mask = 1024

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 332.717, 57.7037 )
stream = ExtResource( 8 )
volume_db = -1.41
bus = "LowReverb"
